src/styles.scss
/* You can add global styles to this file, and also import other style files */

@import "~bootstrap/scss/bootstrap";
@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap");

$fa-font-path: "~font-awesome/fonts";
@import "~font-awesome/scss/font-awesome.scss";

@import "./scss/modal.scss";
@import "./scss/scrollbar.scss";

body {
  font-family: Poppins;
  background-color: #1B1B1B;
}

